fix: fix scroller z-index to auto

--- a/src/components/Scroller/index.css
+++ b/src/components/Scroller/index.css
@@ -1,3 +1,7 @@
+.simplebar-mask {
+  z-index: auto; /* Hmm... */
+}
+
 .simplebar-track.simplebar-horizontal .simplebar-scrollbar {
   height: 4px;
   border-radius: 0;
